debug: swagger
I used wrong swaggo syntax. The id from path (task/:id) has a specific syntax. ref: https://github.com/swaggo/swag#declarative-comments-format
