# docs/swagger.json
@@ -38,7 +38,7 @@
                 }
             }
         },
-        "/list/:id": {
+        "/list/{id}": {
             "get": {
                 "description": "Get a list by id",
                 "consumes": [
@@ -53,7 +53,7 @@
                 "summary": "Get List By ID",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of list to get",
                         "name": "id",
                         "in": "path",
@@ -83,7 +83,7 @@
                 "summary": "Update list by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of list to update",
                         "name": "id",
                         "in": "path",
@@ -121,7 +121,7 @@
                 "summary": "Delete list by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of list to delete",
                         "name": "id",
                         "in": "path",
@@ -176,16 +176,7 @@
                 "summary": "Create a Task",
                 "parameters": [
                     {
-                        "description": "ID of the list this task is going to be placed in",
-                        "name": "listID",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Title of this Task",
+                        "description": "Details of this Task",
                         "name": "task",
                         "in": "body",
                         "required": true,
@@ -204,7 +195,7 @@
                 }
             }
         },
-        "/task/:id": {
+        "/task/{id}": {
             "get": {
                 "description": "Get a task by id",
                 "consumes": [
@@ -219,7 +210,7 @@
                 "summary": "Get Task By ID",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task to get",
                         "name": "id",
                         "in": "path",
@@ -249,7 +240,7 @@
                 "summary": "Update task by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task to update",
                         "name": "id",
                         "in": "path",
@@ -287,7 +278,7 @@
                 "summary": "Delete task by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task to delete",
                         "name": "id",
                         "in": "path",
@@ -373,10 +364,10 @@
         "models.SwaggerInputCreateList": {
             "type": "object",
             "properties": {
-                "order": {
+                "Order": {
                     "type": "integer"
                 },
-                "title": {
+                "Title": {
                     "type": "string"
                 }
             }
@@ -384,13 +375,13 @@
         "models.SwaggerInputCreateTask": {
             "type": "object",
             "properties": {
-                "description": {
+                "Description": {
                     "type": "string"
                 },
-                "list_id": {
+                "ListID": {
                     "type": "integer"
                 },
-                "title": {
+                "Title": {
                     "type": "string"
                 }
             }
@@ -398,10 +389,10 @@
         "models.SwaggerInputUpdateList": {
             "type": "object",
             "properties": {
-                "order": {
+                "Order": {
                     "type": "integer"
                 },
-                "title": {
+                "Title": {
                     "type": "string"
                 }
             }
@@ -409,16 +400,16 @@
         "models.SwaggerInputUpdateTask": {
             "type": "object",
             "properties": {
-                "description": {
+                "Description": {
                     "type": "string"
                 },
-                "list_id": {
+                "ListID": {
                     "type": "integer"
                 },
-                "order": {
+                "Order": {
                     "type": "integer"
                 },
-                "title": {
+                "Title": {
                     "type": "string"
                 }
             }
